# isos

./: .eslintrc.json  .gitignore  .prettierrc.json  README.md  cheatsheet.html  index.html  knip.config.ts  knip.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  sidenote  test.html  tree1.json  tree2.json  tsconfig.json  vite.config.ts
.github/workflows/: publish-docs.yml  publish.yml  test.yml
design/: docs-site.psd  icon.psd
docs/: package-lock.json  package.json  tsconfig.json  vite.config.ts
docs/src/: app.css  app.tsx  docs.mdx  downloads.tsx  index.css  index.scss  main.tsx  vite-env.d.ts
fixtures/: sidenotes.tex  test1.md
playwright-report/: index.html
scripts/: release.sh
src/: app.tsx  cli.ts  header.tsx  main.tsx  styles.css  styles.scss  styles.tsx  use-local-storage.ts  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/resources/: index.css  runtime.css  runtime.js
src-tauri/src/: lib.rs  main.rs
src/assets/: runtime.css  runtime.js
src/components/: open-file-button.tsx  save-file-button.tsx
src/header/: index.tsx  log-toggle.tsx  open-file-button.tsx  save-file-button.tsx  status.tsx  warnings-count.tsx
src/hooks/: use-local-storage.ts
src/processor/: index.ts  latex-to-md.ts
src/runtime/: index.ts
src/warnings/: warn-line-highlight.tsx
test-results/: .last-run.json
unified-latex-forks/unified-latex-to-hast/: index.ts  package.json  vite.config.ts
unified-latex-forks/unified-latex-util-parse/: package.json
(+56 files in other folders)
